mysql/app/helm/deployment.yaml
# app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: vaibhavdashore0203/app_bs:v21
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-init-script
              mountPath: /usr/local/etc/php/conf.d/xdebug.ini
      volumes:
        - name: app-init-script
          configMap:
            name: app-config
